--- a/modules/ext.growthExperiments.StructuredTask.PreEdit/addlink/AddLinkOnboardingContent.less
+++ b/modules/ext.growthExperiments.StructuredTask.PreEdit/addlink/AddLinkOnboardingContent.less
@@ -24,6 +24,8 @@
 			background-color: @background-color-progressive-subtle;
 			mix-blend-mode: multiply;
 			padding: 2px;
+			.noDarkModeMixBlendMode();
+			color: @color-base;
 		}
 	}
 
